Code refactoring and adding tests