@@ -1,25 +1,27 @@
 package com.database.integration.central.services.impl;
 
+import static com.database.integration.core.dto.converter.ProductTypeMapper.toProductType;
+import static com.database.integration.core.exception.DatabaseErrorException.ErrorMessage.PRODUCT_TYPE_NAME_TAKEN;
+import static com.database.integration.core.exception.EntityNotInDatabaseException.ErrorMessage.NO_OBJECT;
+import static com.database.integration.core.exception.EntityOptimisticLockException.ErrorMessage.OPTIMISTIC_LOCK;
+
 import com.database.integration.central.kafka.producer.KafkaProducer;
 import com.database.integration.central.repositories.ProductTypeRepository;
 import com.database.integration.central.services.ProductTypeService;
 import com.database.integration.core.dto.ProductTypeDto;
-import com.database.integration.core.dto.converter.ProductTypeConverter;
 import com.database.integration.core.exception.DatabaseErrorException;
 import com.database.integration.core.exception.EntityNotInDatabaseException;
 import com.database.integration.core.exception.EntityOptimisticLockException;
 import com.database.integration.core.model.ProductType;
 import jakarta.persistence.PersistenceException;
+import java.util.List;
+import java.util.UUID;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.orm.ObjectOptimisticLockingFailureException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductTypeServiceImpl implements ProductTypeService {
@@ -34,8 +36,8 @@ public class ProductTypeServiceImpl implements ProductTypeService {
     @Transactional(readOnly = true, propagation = Propagation.MANDATORY)
     @PreAuthorize("hasAuthority('PRODUCT_TYPE_READ')")
     public ProductType getProductTypeById(UUID id) throws EntityNotInDatabaseException {
-        ProductType productType = productTypeRepository.findById(id).orElseThrow(
-                () -> new EntityNotInDatabaseException(EntityNotInDatabaseException.NO_OBJECT));
+        var productType = productTypeRepository.findById(id).orElseThrow(
+            () -> new EntityNotInDatabaseException(NO_OBJECT));
         return productType.isDeleted() ? null : productType;
     }
 
@@ -43,44 +45,43 @@ public class ProductTypeServiceImpl implements ProductTypeService {
     @Transactional(readOnly = true, propagation = Propagation.MANDATORY)
     @PreAuthorize("hasAuthority('PRODUCT_TYPE_LIST_READ')")
     public List<ProductType> getAllProductTypes() {
-        List<ProductType> deviceModels = productTypeRepository.findAll();
-        return deviceModels.stream().filter(productType -> !productType.isDeleted())
-                .collect(Collectors.toList());
+        var deviceModels = productTypeRepository.findAll();
+        return deviceModels.stream().filter(productType -> !productType.isDeleted()).toList();
     }
 
     @Override
     @Transactional(propagation = Propagation.MANDATORY)
     @PreAuthorize("hasAuthority('PRODUCT_TYPE_CREATE')")
-    public void createNewDeviceModel(ProductTypeDto productTypeDto) throws DatabaseErrorException {
+    public ProductType createProductType(ProductTypeDto productTypeDto)
+        throws DatabaseErrorException {
         try {
-            ProductType productType = new ProductType();
-            ProductType savedProductType = productTypeRepository.saveAndFlush(
-                    ProductTypeConverter.toProductType(productTypeDto, productType));
+            var savedProductType = productTypeRepository.saveAndFlush(
+                toProductType(productTypeDto));
             kafkaProducer.send(savedProductType);
+            return savedProductType;
         } catch (PersistenceException e) {
-            throw new DatabaseErrorException(DatabaseErrorException.PRODUCT_TYPE_NAME_NAME_TAKEN);
+            throw new DatabaseErrorException(PRODUCT_TYPE_NAME_TAKEN);
         }
     }
 
     @Override
     @Transactional(propagation = Propagation.MANDATORY)
     @PreAuthorize("hasAuthority('PRODUCT_TYPE_UPDATE')")
-    public void updateProductType(ProductTypeDto productTypeDto)
-            throws EntityNotInDatabaseException, EntityOptimisticLockException, DatabaseErrorException {
+    public ProductType updateProductType(ProductTypeDto productTypeDto)
+        throws EntityNotInDatabaseException, EntityOptimisticLockException, DatabaseErrorException {
         try {
-            ProductType oldProductType = productTypeRepository.findById(productTypeDto.getId())
-                    .orElseThrow(
-                            () -> new EntityNotInDatabaseException(EntityNotInDatabaseException.NO_OBJECT));
+            var oldProductType = productTypeRepository.findById(productTypeDto.getId())
+                .orElseThrow(() -> new EntityNotInDatabaseException(NO_OBJECT));
             productTypeRepository.detach(oldProductType);
-            ProductType updatedProductType = ProductTypeConverter.toProductType(productTypeDto,
-                    oldProductType);
-            productTypeRepository.saveAndFlush(updatedProductType);
+            var updatedProductType = productTypeRepository.saveAndFlush(
+                toProductType(productTypeDto, oldProductType));
             kafkaProducer.send(updatedProductType);
+            return updatedProductType;
         } catch (ObjectOptimisticLockingFailureException e) {
             e.printStackTrace();
-            throw new EntityOptimisticLockException(EntityOptimisticLockException.OPTIMISTIC_LOCK);
+            throw new EntityOptimisticLockException(OPTIMISTIC_LOCK);
         } catch (PersistenceException e) {
-            throw new DatabaseErrorException(DatabaseErrorException.PRODUCT_TYPE_NAME_NAME_TAKEN);
+            throw new DatabaseErrorException(PRODUCT_TYPE_NAME_TAKEN);
         }
     }
 
@@ -88,8 +89,8 @@ public class ProductTypeServiceImpl implements ProductTypeService {
     @Transactional(propagation = Propagation.MANDATORY)
     @PreAuthorize("hasAuthority('PRODUCT_TYPE_DELETE')")
     public void deleteProductTypeById(UUID id) throws EntityNotInDatabaseException {
-        ProductType productType = productTypeRepository.findById(id).orElseThrow(
-                () -> new EntityNotInDatabaseException(EntityNotInDatabaseException.NO_OBJECT));
+        var productType = productTypeRepository.findById(id).orElseThrow(
+            () -> new EntityNotInDatabaseException(NO_OBJECT));
         productType.setDeleted(true);
         kafkaProducer.send(productType);
     }
